[package]
name = "catts-evm-proxy"
version = "0.0.1"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
http = "1.1.0"
lazy_static = "1.4.0"
serde = "1.0.201"
serde_json = "1.0.114"
url = "2.5.0"
worker = "0.0.18"

[profile.release]
opt-level = "s"   # optimize for size in release builds
lto = true
strip = true
codegen-units = 1
